--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                     </div>
                 </div>
                 
-                <!-- Animation Area (for sleeping animation) -->
+                <!-- Animation Area -->
                 <div class="animation-area">
                     <div class="sleeping-animation" id="sleepingAnimation">
                         <!-- Sleeping animation will appear here -->
